drafts: Fix tooltip css in draft controls.
Tooltip popover in draft controls was too narrow.
Now its width is set to max-content width.
This looks nice.

--- a/static/styles/drafts.css
+++ b/static/styles/drafts.css
@@ -115,6 +115,11 @@
                 right: 0;
             }
 
+            [data-tippy-root] {
+                width: max-content;
+                word-wrap: unset;
+            }
+
             .restore-draft {
                 cursor: pointer;
                 margin-right: 5px;
